--- a/designs/dd.css
+++ b/designs/dd.css
@@ -6,8 +6,21 @@
     border-width: 1px;
 }
 
+@keyframes blinker {
+    50% {
+        background-color: transparent;
+    }
+
+
+}
+
 .blink {
     animation: blinker 1s linear infinite;
+    background-color: purple;
+}
+
+.active {
+    background-color: purple;
 }
 
 #label_r2d {
