--- a/designs/dd.css
+++ b/designs/dd.css
@@ -1,11 +1,3 @@
-#label_tsa {
-    /* background-color: purple; */
-    border-radius: 10px;
-    border-style: solid;
-    border-color: white;
-    border-width: 1px;
-}
-
 @keyframes blinker {
     50% {
         background-color: transparent;
@@ -25,6 +17,32 @@
 
 #label_r2d {
     /* background-color: purple; */
+    border-radius: 10px;
+    border-style: solid;
+    border-color: white;
+    border-width: 1px;
+}
+
+#label_tsa {
+    /* background-color: purple; */
+    border-radius: 10px;
+    border-style: solid;
+    border-color: white;
+    border-width: 1px;
+}
+
+#box_error {
+    background-color: red;
+    color: white;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: white;
+    border-width: 1px;
+}
+
+#box_info{
+    background-color: #2BA3FF;
+    color: white;
     border-radius: 10px;
     border-style: solid;
     border-color: white;
